@startuml

title __RAYTRACER's Class Diagram__\n

  namespace edu.up.isgc.raytracer {
    interface edu.up.isgc.raytracer.IIntersectable {
        {abstract} + getIntersection()
    }
  }
  

  namespace edu.up.isgc.raytracer {
    class edu.up.isgc.raytracer.Intersection {
        - distance : double
        + Intersection()
        + getDistance()
        + getNormal()
        + getObject()
        + getPosition()
        + setDistance()
        + setNormal()
        + setObject()
        + setPosition()
    }
  }
  

  namespace edu.up.isgc.raytracer {
    class edu.up.isgc.raytracer.Ray {
        + Ray()
        + getDirection()
        + getOrigin()
        + setDirection()
        + setOrigin()
    }
  }
  

  namespace edu.up.isgc.raytracer {
    class edu.up.isgc.raytracer.Raytracer {
        {static} + BlinnPhong()
        {static} + addColor()
        {static} + clamp()
        {static} + main()
        {static} + raycast()
        {static} + raytrace()
    }
  }
  

  namespace edu.up.isgc.raytracer {
    class edu.up.isgc.raytracer.Scene {
        - lights : ArrayList<Light>
        - objects : ArrayList<Object3D>
        + Scene()
        + addLight()
        + addObject()
        + getCamera()
        + getLights()
        + getObjects()
        + setCamera()
        + setLights()
        + setObjects()
    }
  }
  

  namespace edu.up.isgc.raytracer {
    class edu.up.isgc.raytracer.Vector3D {
        {static} - ZERO : Vector3D
        - x : double
        - y : double
        - z : double
        + Vector3D()
        {static} + ZERO()
        {static} + add()
        + clone()
        {static} + crossProduct()
        {static} + dotProduct()
        + getX()
        + getY()
        + getZ()
        {static} + magnitude()
        {static} + normalize()
        {static} + scalarMultiplication()
        + setX()
        + setY()
        + setZ()
        {static} + substract()
        + toString()
    }
  }
  

  edu.up.isgc.raytracer.Intersection o-- edu.up.isgc.raytracer.Vector3D : normal
  edu.up.isgc.raytracer.Intersection o-- edu.up.isgc.raytracer.objects.Object3D : object
  edu.up.isgc.raytracer.Intersection o-- edu.up.isgc.raytracer.Vector3D : position
  edu.up.isgc.raytracer.Ray o-- edu.up.isgc.raytracer.Vector3D : direction
  edu.up.isgc.raytracer.Ray o-- edu.up.isgc.raytracer.Vector3D : origin
  edu.up.isgc.raytracer.Scene o-- edu.up.isgc.raytracer.objects.Camera : camera


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
